--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2005 drama medico</title>
+    <style>
+        h1{
+            color:#ff0000:
+        }
+    </style>
+
 </head>
 
 <body>
-    <h1>Greys Anatomy</h1>
+    <h1 style="color:#00ff00;
+    ">Greys Anatomy</h1>
     <h2>Curiosidades de greys anatomy</h2>
     <p>Grey's Anatomy é um dos dramas de melhor audiência nos Estados Unidos, apesar da queda nas últimas temporadas,
         estando entre os 10 melhores no ranking de audiência e sendo bem recebido pelos críticos durante o seu tempo de
