--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <title>2005 drama medico</title>
     <style>
         h1{
-            color:#ff0000:
-        }
-    </style>
+            color:#ec2187:
+            text-align:center;
+            font-family:cursive;
+            font-size:50pt
+         }
+    
+         h2{
+            color:aqua;
+            font-size: 25;
+         }
 
+         </style>
 </head>
 
 <body>
-    <h1 style="color:#00ff00;
-    ">Greys Anatomy</h1>
+    <h1>Greys Anatomy</h1>
+    <img src="img1.jpg">
     <h2>Curiosidades de greys anatomy</h2>
     <p>Grey's Anatomy é um dos dramas de melhor audiência nos Estados Unidos, apesar da queda nas últimas temporadas,
         estando entre os 10 melhores no ranking de audiência e sendo bem recebido pelos críticos durante o seu tempo de
