--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          }
     
          h2{
-            color:aqua;
+            color:rgb(231, 27, 146);
             font-size: 25;
          }
 
