--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         a gente esteja falando de algo que qualquer pessoa veja em um açougue, ainda é de se impressionar. No caso do
         líquido que simula o sangue, o realismo também é levado bastante a sério pela equipe da série. Para produzi-lo,
         os técnicos usam sangue real misturado com gordura de frango e gelatina vermelha.</p>
+        <img scr="img2.jpg">
 </body>
 
 </html>
