--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
             font-size: 25;
          }
 
-         </style>
+        img {
+            width: 500px;
+            height: 500px;
+        }
+        
+        
+        </style>
 </head>
 
 <body>
